<resources>
    <string name="app_name">Report</string>
    <string name="open_drawer">open navigation drawer</string>
    <string name="close_drawer">close navigation drawer</string>
    <string name="sign_in_title">SIGN IN</string>
    <string name="welcome_to_reporter_app">Welcome,to reporter App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="first_time_here">First time here??</string>
    <string name="sign_up">Sign up</string>
    <string name="click_addreport_to_add_new_report">Click AddReport to add new report</string>
    <string name="report">Report</string>
    <string name="send">Send</string>
    <string name="sign_up_title">SIGN UP</string>
    <string name="name">Name</string>
    <string name="lastname">LastName</string>
    <string name="got_it">Got it</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="addreport">AddReport</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="deleteall">DeleteAll</string>
    <string name="skip">SKIP</string>
    <string name="loading">Loading...</string>
    <string name="logout_text">Do you want to exist ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exist">press again to exist</string>
    <string name="error_toast">Internet Problem</string>
    <string name="warning_toast">Server Problem</string>
    <string name="success_toast">Success</string>
    <string name="info_toast">Username or Password is wrong!</string>
    <string name="choose_one">choose one</string>
    <string name="write_report">Please write your report</string>
    <string name="write_name">Please write your name</string>
    <string name="write_last_name">Please write your last name</string>
    <string name="write_user_name">Please write your user name</string>
    <string name="write_password">password should be at least 6 character long</string>
    <string name="choose_section">You should select your section!</string>
    <string name="mange_time_title">Manage  Time</string>
    <string name="mange_time">Manage your time professional</string>
    <string name="create_report_title">Create Reports</string>
    <string name="create_report">Create your reports simply and easy</string>
    <string name="send_report_title">Send Reports</string>
    <string name="user">User</string>
    <string name="version">Version 1.0</string>
    <string name="connect_us">Connect with us</string>
    <string name="advertise_us">Advertise with us</string>
    <string name="send_report">Send your reports quickly  and see theme clarify</string>
    <string name="about_page">Asooda Owar is an IT company headquartered in
        Herat – Afghanistan focuses on Designing and Developing Websites and Web Applications,
        Developing Mobile Applications, Host and Domain Services, Graphic Design and Database Design.
        Asooda Owar aims to make businesses simpler and better.</string>







    <string-array name="section">
        <item>Select a Section</item>
        <item>Android Developer</item>
        <item>Graphic Designer</item>
        <item>Web Developer</item>
        <item>Game</item>

    </string-array>
</resources>
