<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/overlay_dark_100">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="40sp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_smlarge"
            android:text="@string/welcome_to_reporter_app"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@android:color/white"
            android:textSize="15sp" />


    </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="5dp"
            android:orientation="vertical"
            android:padding="35dp">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/activity_login_page_EditText_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/overlay_light_90"
                   android:padding="@dimen/spacing_mlarge"
                    android:textColorHint="@color/overlay_light_90"
                    android:drawableLeft="@drawable/ic_person"
                    android:hint="@string/username" />


                <EditText
                    android:id="@+id/activity_login_page_EditText_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_mlarge"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/overlay_light_90"
                    android:textColorHint="@color/overlay_light_90"
                    android:drawableLeft="@drawable/ic_lock"
                    android:hint="@string/password" />

                <Button
                    android:id="@+id/btn_sign_in"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layout"
                   android:layout_gravity="center"
                    android:layout_marginTop="45dp"
                    android:background="@drawable/btn_rounded_white"
                    android:onClick="btn_signin"
                    android:text="@string/sign_in"
                    android:textColor="#fff"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/spacing_middle">

                    <com.github.ybq.android.spinkit.SpinKitView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/spin_kit_login"
                        style="@style/SpinKitView.Small.Circle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="gone"
                        app:SpinKit_Color="@color/grey_600"
                        android:layout_marginRight="@dimen/spacing_middle"/>

                    <TextView
                        android:id="@+id/text_view_load_login"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/loading"
                        android:visibility="gone"
                        android:textColor="@color/grey_400" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layout"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/first_time_here"
                        android:layout_marginTop="@dimen/spacing_middle"
                        android:textColor="#fff" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:id="@+id/text_view_sign_up"
                        android:layout_marginTop="@dimen/spacing_middle"
                        android:textColor="#fff"
                        android:padding="@dimen/spacing_middle"
                        android:background="@color/overlay_dark_100"
                        android:text="@string/sign_up"
                        android:onClick="btn_signup_women"
                        android:textStyle="bold" />


                </LinearLayout>


            </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </RelativeLayout>

</LinearLayout>
